--- a/design-log/59.1 - Shared Schema Definition.md
+++ b/design-log/59.1 - Shared Schema Definition.md
@@ -1,22 +1,26 @@
 # 59.1 - Vendor Schemas & The Figma Interchange
 
 ## Context
+
 As defined in [Log 59](./59%20-%20Server-Side%20Figma%20Conversion%20and%20Bi-directional%20Sync.md), the Jay Dev Server supports a **Vendor Adapter Architecture**. Each vendor (Figma, Wix, etc.) requires a shared data contract (Schema) that governs the communication between its Client Plugin and its Server Adapter.
 
 This log details the general strategy for Vendor Schemas and the specific design for the **Figma Interchange Schema**.
 
 ## Vendor Schema Strategy
+
 Instead of a single "Universal Design AST", we define a schema **per vendor**.
-*   **Purpose:** To faithfully represent the vendor's internal model in a JSON format that can be persisted to disk and processed by Node.js.
-*   **Requirement:** The schema must support "High-Fidelity Round-tripping" (Export -> Save -> Import) without data loss for supported features.
+
+- **Purpose:** To faithfully represent the vendor's internal model in a JSON format that can be persisted to disk and processed by Node.js.
+- **Requirement:** The schema must support "High-Fidelity Round-tripping" (Export -> Save -> Import) without data loss for supported features.
 
 ## The Figma Interchange Schema (`@jay-framework/figma-interchange`)
 
 We will create a package to hold the TypeScript definitions for the Figma integration.
 
-*   **Package:** `jay/packages/figma-interchange` (or `jay/packages/vendors/figma-interchange`)
+- **Package:** `jay/packages/figma-interchange` (or `jay/packages/vendors/figma-interchange`)
 
 ### 1. The Root Object
+
 ```typescript
 export interface FigmaInterchangeDoc {
   version: string; // Schema version
@@ -28,29 +32,29 @@ export interface FigmaInterchangeDoc {
 ```
 
 ### 2. Interchange Node System
+
 A simplified reflection of the Figma Plugin API `SceneNode` hierarchy.
 
 ```typescript
-export type InterchangeNode = 
+export type InterchangeNode =
   | InterchangeFrame
   | InterchangeText
   | InterchangeRectangle
   | InterchangeInstance
-  | InterchangeComponent
-  // ...
-  ;
+  | InterchangeComponent;
+// ...
 
 export interface BaseInterchangeNode {
   id: string;
   name: string;
   type: NodeType; // 'FRAME', 'TEXT', etc.
   visible: boolean;
-  
+
   // --- Visuals ---
   fills: Paint[];
   strokes: Paint[];
   effects: Effect[];
-  
+
   // --- Jay Data (Co-located) ---
   jayData?: JayNodeMetadata;
 }
@@ -64,40 +68,46 @@ export interface InterchangeFrame extends BaseInterchangeNode, LayoutMixin {
 ```
 
 ### 3. Jay Metadata Structure
-This structure is generic enough that other vendors *could* reuse it, but it is defined here specifically for how it lives inside the Figma JSON.
+
+This structure is generic enough that other vendors _could_ reuse it, but it is defined here specifically for how it lives inside the Figma JSON.
 
 ```typescript
 export interface JayNodeMetadata {
   /** Bindings to Jay Contract properties */
   bindings?: JayLayerBinding[];
-  
+
   /** HTML Semantic Tag Override */
   semanticTag?: string;
-  
+
   /** Directives (j-if, j-for) */
   directives?: JayDirective[];
 }
 
 export interface JayLayerBinding {
   contractProperty: string; // e.g., "viewModel.title"
-  targetProperty: string;   // e.g., "characters", "fill"
+  targetProperty: string; // e.g., "characters", "fill"
 }
 ```
 
 ## Implementation Plan
 
 ### Step 1: Initialize Package
+
 Create `jay/packages/figma-interchange` as a shared library.
 
 ### Step 2: Define Types
+
 Port necessary types from Figma's API (`Paint`, `Effect`, `LayoutConstraint`) to this package so they are available in the Node.js environment (Server) where the global `figma` object does not exist.
 
 ### Step 3: Publish
+
 Make this package a dependency of:
+
 1.  `@jay-desktop-poc/plugin` (The Figma Client)
 2.  `@jay-framework/jay-dev-server` (The Server Adapter)
 
 ### Asset Handling
-*   **Decision:** We will NOT embed Base64 data in the JSON.
-*   The schema will support an `assetRef` field (URL or relative path) in `ImagePaint` and `Vector` nodes.
-*   The Plugin is responsible for uploading the binaries separately and populating this field.
+
+- **Decision:** We will NOT embed Base64 data in the JSON.
+- The schema will support an `assetRef` field (URL or relative path) in `ImagePaint` and `Vector` nodes.
+- The Plugin is responsible for uploading the binaries separately and populating this field.
