--- a/design-log/59.5 - Plugin Import Engine.md
+++ b/design-log/59.5 - Plugin Import Engine.md
@@ -1,40 +1,48 @@
 # 59.5 - Editor Client Import (Figma Implementation)
 
 ## Context
+
 In the [Vendor Adapter Architecture](./59%20-%20Server-Side%20Figma%20Conversion%20and%20Bi-directional%20Sync.md), the Client Plugin must be able to ingest the source-of-truth JSON and rebuild the visual state.
 
 This log details the implementation for the **Figma Client Import**.
 
 ## Goals
+
 1.  **Fetch:** Retrieve `FigmaInterchangeDoc` from `/api/design/figma/import`.
 2.  **Rebuild:** Convert schema nodes back to native `SceneNodes`.
 
 ## Implementation Details
 
 ### 1. API Communication
-*   **Request:** `GET /api/design/figma/import?url=[current_page_url]`
-*   **Response:** JSON `FigmaInterchangeDoc`.
+
+- **Request:** `GET /api/design/figma/import?url=[current_page_url]`
+- **Response:** JSON `FigmaInterchangeDoc`.
 
 ### 2. Rehydration Engine (Figma Side)
+
 We need a `hydrate(target, source)` function.
-*   **Destructive Rebuild:** For V1, we will clear the target frame and rebuild from scratch to ensure 1:1 match.
-*   **Node Creation:**
-    *   `figma.createFrame()`
-    *   `figma.createText()`
-*   **Property Application:**
-    *   Apply `fills`, `strokes`, `effects` from JSON.
-    *   Apply `layoutMode`, `padding` from JSON.
-*   **Metadata Restoration:**
-    *   `node.setPluginData('jay-bindings', JSON.stringify(source.jayData))`
+
+- **Destructive Rebuild:** For V1, we will clear the target frame and rebuild from scratch to ensure 1:1 match.
+- **Node Creation:**
+  - `figma.createFrame()`
+  - `figma.createText()`
+- **Property Application:**
+  - Apply `fills`, `strokes`, `effects` from JSON.
+  - Apply `layoutMode`, `padding` from JSON.
+- **Metadata Restoration:**
+  - `node.setPluginData('jay-bindings', JSON.stringify(source.jayData))`
 
 ### 3. Font Handling
-*   **Critical:** Before creating Text nodes, we must collect all font families from the JSON and call `figma.loadFontAsync()`. The rebuilder must pause until fonts are ready.
+
+- **Critical:** Before creating Text nodes, we must collect all font families from the JSON and call `figma.loadFontAsync()`. The rebuilder must pause until fonts are ready.
 
 ### 3. Handling Assets
-*   If the JSON contains Asset References (URLs/Paths):
-    *   `figma.createImageAsync(url)`
-    *   Apply as an ImagePaint.
+
+- If the JSON contains Asset References (URLs/Paths):
+  - `figma.createImageAsync(url)`
+  - Apply as an ImagePaint.
 
 ## UX
-*   **Import Button:** "Load from Server".
-*   **Safety:** Warn user "This will replace the current content of the frame."
+
+- **Import Button:** "Load from Server".
+- **Safety:** Warn user "This will replace the current content of the frame."
