--- a/design-log/91.1 - node naming guidance for export cleanup.md
+++ b/design-log/91.1 - node naming guidance for export cleanup.md
@@ -13,16 +13,21 @@ This means roundtrip naming is broken: original Figma names like "Hero Section" 
 Only 3 naming cases actually matter for the system to work:
 
 ### 1. Section name
+
 The jay page section name (e.g., "Product Page"). Used for display in the plugin UI.
 
 ### 2. "Content" frame
+
 `contractUiGenerator.ts` looks up the content frame by name:
+
 ```typescript
-const contentFrame = jPageNode.children.find(child => child.name === "Content") as FrameNode;
+const contentFrame = jPageNode.children.find((child) => child.name === 'Content') as FrameNode;
 ```
+
 This MUST be named "Content" exactly.
 
 ### 3. COMPONENT_SET / COMPONENT names
+
 Variant property names are encoded in the component set and component names (e.g., `"status"`, `"status=ACTIVE"`). These are structural — they define variant properties.
 
 ---
@@ -38,6 +43,7 @@ All other node names (regular FRAMEs, TEXT nodes, GROUPs, VECTORs, RECTANGLEs) a
 ### In the forward export (Figma -> jay-html):
 
 **Option A (minimal — recommended):** Only emit `data-name` on nodes where the name is functionally required or meaningfully different from the default:
+
 - The `<section>` element — always emit `data-name` with the section's Figma name
 - COMPONENT_SET containers — the name carries variant property info
 - Skip `data-name` for generic frames/text/vectors — these will get default names on reimport and that's fine
@@ -47,6 +53,7 @@ All other node names (regular FRAMEs, TEXT nodes, GROUPs, VECTORs, RECTANGLEs) a
 ### In the reverse converter (jay-html -> figma.json):
 
 Already handled correctly. The naming priority chain is:
+
 1. `data-name` attribute (when present)
 2. `aria-label`
 3. `data-figma-type` capitalized (e.g., "frame" -> "Frame")
@@ -60,6 +67,7 @@ No changes needed here.
 The `node-naming` and `node-naming-detailed` fixtures validate the naming priority chain. If you go with Option A, no test changes needed — the reverse converter already handles both cases (with and without `data-name`).
 
 If you want to strip names from the figma.json export entirely (for non-functional nodes), you'd need to:
+
 1. Keep `name` on SECTION, "Content" frame, COMPONENT_SET, and COMPONENT nodes
 2. Either omit `name` on everything else, or set a generic default
 3. Update all fixture `expected.figma.json` files to match (remove specific names from non-functional nodes)
@@ -72,13 +80,13 @@ The forward converter doesn't emit `data-figma-id` either. This is used by the r
 
 ## Summary
 
-| What | Functionally required? | Recommendation |
-|------|----------------------|----------------|
-| Section name | Yes | Always emit `data-name` |
-| "Content" frame name | Yes (hardcoded lookup) | Always name it "Content" |
-| COMPONENT_SET/COMPONENT names | Yes (variant properties) | Always emit |
-| All other node names | No — cosmetic only | Can omit from export, default is fine |
-| `data-figma-id` | Not yet, but valuable for future | Consider emitting on all nodes |
+| What                          | Functionally required?           | Recommendation                        |
+| ----------------------------- | -------------------------------- | ------------------------------------- |
+| Section name                  | Yes                              | Always emit `data-name`               |
+| "Content" frame name          | Yes (hardcoded lookup)           | Always name it "Content"              |
+| COMPONENT_SET/COMPONENT names | Yes (variant properties)         | Always emit                           |
+| All other node names          | No — cosmetic only               | Can omit from export, default is fine |
+| `data-figma-id`               | Not yet, but valuable for future | Consider emitting on all nodes        |
 
 ---
 
@@ -89,10 +97,12 @@ Implemented Option A (minimal) in the forward converter.
 ### Changes made
 
 **`packages/jay-stack/stack-cli/lib/vendors/figma/index.ts`:**
+
 - Section elements now emit `data-name="${name}"` (the original Figma section name)
 - Content frame (direct child of SECTION) now emits `data-name="${node.name}"` — preserves the "Content" name required by `contractUiGenerator.ts`
 
 **`packages/jay-stack/stack-cli/lib/vendors/figma/converters/variants.ts`:**
+
 - Variant container div now emits `data-name="${componentSetName || node.name}"` — preserves the component set name that encodes variant property structure
 
 **Test fixtures updated:** All 5 expected.jay-html files updated to include `data-name` on content frames and variant containers.
